--- a/login/templates/_main_sidebar.html
+++ b/login/templates/_main_sidebar.html
@@ -144,7 +144,7 @@
                         {% endif %}
                         {% if request.user|user_belongs_to_group:'sig' %}
                         <li class="nav-item">
-                            <a id="cargarContenido" class="nav-link">
+                            <a id="cargarContenido"href="{% url 'sig' %}" class="nav-link">
                                 <i class="nav-icon fas fa-spinner"></i>SIG
                             </a>
                         </li>
