--- a/login/templates/_main_header.html
+++ b/login/templates/_main_header.html
@@ -54,7 +54,7 @@
                     </a>
                     <div class="dropdown-divider"></div>
                     <div class="dropdown-footer">
-                        <a href="{% block change_password_url %}{% url 'admin:password_change' %}{% endblock %}"
+                        <a href="{% block change_password_url %}{% url 'password_change' %}{% endblock %}"
                             class="btn btn-primary btn-sm">{% trans 'Change password' %}</a>
                         <a href="/exit" class="btn btn-danger btn-sm">{%trans 'Sign out'%}</a>
                     </div>
