ultimos cambios test

--- a/login/templates/gestioncomercial.html
+++ b/login/templates/gestioncomercial.html
@@ -18,7 +18,7 @@
   <!-- SELECT2 EXAMPLE -->
   <div class="card card-default  collapsed collapsed-card">
     <div class="card-header bg-dark" data-card-widget="collapse">
-      <h3 class="card-title">Ingreso De Clientes Activos</h3>
+      <h3 class="card-title">Ingreso De Clientes </h3>
 
       <div class="card-tools">
         <button type="button" class="btn btn-tool"><i class="fas fa-minus"></i></button>
