cambio de reporte

--- a/login/templates/report_gadminfinan.html
+++ b/login/templates/report_gadminfinan.html
@@ -182,6 +182,7 @@
                                         <th>CLIENTE</th>
                                         <th>ZONA</th>
                                         <th>VALOR</th>
+                                        <th>SEMANA</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -192,7 +193,7 @@
                                         <td>{{ preciocana.1 }}</td>
                                         <td>{{ preciocana.2 }}</td>
                                         <td>{{ preciocana.3 }}</td>
-
+                                        <td>{{ preciocana.4 }}</td>
                                     </tr>
                                     {% endfor %}
 
