adicion de decomisos por fecha de la API decomisos

--- a/login/templates/report_cadabastecimiento.html
+++ b/login/templates/report_cadabastecimiento.html
@@ -82,6 +82,7 @@
                     <button id="btn_kgdespos" class="btn btn-repor btn-lg" onclick="mostrarkgdespos()">Reporte kg Despostados</button>
                     <button id="btn_particortes" class="btn btn-repor btn-lg" onclick="mostrarparticortes()" style="margin-top: 8px;">Reporte Participacion Cortes</button>
                     <button id="btn_toneladasimport" class="btn btn-repor btn-lg" onclick="mostrartoneladasimport()"style="margin-top: 8px;">Reporte Toneladas Importadas</button>
+                    <a class="btn btn-repor btn-lg" href="{% url 'decomisos' %}"><i class="nav-icon fas fa-city"></i> DECOMISOS</a>
                 </div>
             </section>
   
