--- a/login/templates/tecnologia.html
+++ b/login/templates/tecnologia.html
@@ -16,7 +16,7 @@
 
 
   <!-- SELECT2 EXAMPLE -->
-  <div class="card card-default  collapsed collapsed-card">
+  <!-- <div class="card card-default  collapsed collapsed-card">
     <div class="card-header bg-dark" data-card-widget="collapse">
       <h3 class="card-title">Ingreso De Transformacion Digital</h3>
 
@@ -24,8 +24,8 @@
         <button type="button" class="btn btn-tool"><i class="fas fa-minus"></i></button>
       </div>
     </div>
-    <!-- /.card-header -->
-    <div class="card-body">
+     /.card-header -->
+    <!-- <div class="card-body">
       <div class="row">
         <div class="col-md-6">
           <form method="post" action="{% url 'cargar_excel_transfordig' %}" enctype="multipart/form-data">
@@ -41,7 +41,7 @@
         Los valores ingresados aquí no pueden ser cambiados luego de ingresarlos.
       </div>
     </div>
-  </div>
+  </div> --> 
 
   <!------------------------------------------------------- carga 2do excel  -------------------------->
   <div class="card card-default  collapsed collapsed-card">
@@ -70,3 +70,30 @@
       </div>
     </div>
   </div>
+    <!------------------------------------------------------- carga 2do excel  -------------------------->
+    <div class="card card-default  collapsed collapsed-card">
+      <div class="card-header bg-dark" data-card-widget="collapse">
+        <h3 class="card-title">Ingreso de Transformacion Digital  </h3>
+  
+        <div class="card-tools">
+          <button type="button" class="btn btn-tool"><i class="fas fa-minus"></i></button>
+        </div>
+      </div>
+      <!-- /.card-header -->
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-6">
+            <form method="post" action="{% url 'cargar_excel_avantransfordig' %}" enctype="multipart/form-data">
+              {% csrf_token %}
+              <label for="archivo_excel">Selecciona un archivo Excel:</label>
+              <input class="btn btn-info1" type="file" name="archivo_excel" accept=".xlsx, .xls">
+              <br>
+              <button class="btn bg-gradient-primary "  type="submit">Cargar Datos</button>
+            </form>
+          </div>
+        </div>
+        <div class="card-footer">
+          Los valores ingresados aquí no pueden ser cambiados luego de ingresarlos.
+        </div>
+      </div>
+    </div>
