cambios en Fortuitos

--- a/login/templates/report_gtecnica.html
+++ b/login/templates/report_gtecnica.html
@@ -272,7 +272,8 @@
                                         <th>AÑO SERVICIO</th>
                                         <th>OBSERVACIONES</th>
                                         <th>FECHA CORTE</th>
-
+                                        <th>CANTIDAD PROYECCION HEMBRAS</th>
+                                        <th>CANTIDAD REAL</th>                              
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -286,6 +287,8 @@
                                         <td>{{ prohembra.4 }}</td>
                                         <td>{{ prohembra.5 }}</td>
                                         <td>{{ prohembra.6 }}</td>
+                                        <td>{{ prohembra.7 }}</td>
+                                        <td>{{ prohembra.8 }}</td>
 
                                     </tr>
                                     {% endfor %}
