--- a/login/templates/report_gtecnica.html
+++ b/login/templates/report_gtecnica.html
@@ -68,7 +68,7 @@
                 {# Breadcrumb implementation left to developers #}
                 {% endblock %}
                 {% endblock no_heading %}
-                <h1>Reportes Gestion Tecnica</h1>
+                <h1>Reportes Producción Sostenible</h1>
             </section>
             {% endblock %}{% endblock %}
             <section>
