--- a/login/templates/_main_sidebar.html
+++ b/login/templates/_main_sidebar.html
@@ -277,7 +277,21 @@
                 {% if request.user|user_belongs_to_group:'tecnica' %}
                         <li class="nav-item" style="margin-bottom: 20px; margin-left: 10px;">
                             <a href="{% url 'repremision' %}"  >
-                                <i class="nav-icon fas fa-user-tie"></i>Remisiones
+                                <i class="nav-icon fas fa-qrcode"></i>Remisiones
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if request.user|user_belongs_to_group:'tecnica' %}
+                        <li class="nav-item" style="margin-bottom: 20px; margin-left: 10px;">
+                            <a href="{% url 'disponiblilidad' %}"  >
+                                <i class="nav-icon  fas fa-tag"></i>Disponibilidad
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if request.user|user_belongs_to_group:'tecnica' %}
+                        <li class="nav-item" style="margin-bottom: 20px; margin-left: 10px;">
+                            <a href="{% url 'disponiblilidad' %}"  >
+                                <i class="nav-icon  fas fa-cart-plus"></i>Pedido a Granja
                             </a>
                         </li>
                         {% endif %}
